--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-native-paper": "^4.9.2",
     "react-native-reanimated": "^3.15.4",
     "react-native-safe-area-context": "^4.11.0",
-    "react-native-screens": "^3.34.0"
+    "react-native-screens": "^3.34.0",
+    "react-native-sqlite-storage": "^6.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
