--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native-reanimated": "^3.16.0",
     "react-native-safe-area-context": "^4.11.1",
     "react-native-screens": "^3.34.0",
-    "react-native-sqlite-storage": "^6.0.1"
+    "react-native-sqlite-storage": "^6.0.1",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
