--- a/package.json
+++ b/package.json
@@ -11,10 +11,6 @@
     "@expo/vector-icons": "^14.0.3",
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-firebase/app": "^21.6.2",
-    "@react-native-firebase/auth": "^21.6.1",
-    "@react-native-firebase/database": "^21.6.1",
-    "@react-native-firebase/firestore": "^21.6.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "expo": "~51.0.28",
@@ -23,6 +19,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-document-picker": "^9.3.1",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.20.0",
     "react-native-paper": "^4.9.2",
     "react-native-reanimated": "^3.16.0",
